<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:id="@+id/imHome"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/text_label_home"/>
    <item
        android:id="@+id/imFavorite"
        android:enabled="true"
        android:icon="@drawable/ic_favorite"
        android:title="@string/text_label_favorite"/>

    <item
        android:id="@+id/imMusic"
        android:enabled="true"
        android:icon="@drawable/ic_music"
        android:title="@string/text_label_music"/>
    <item
        android:id="@+id/imPlace"
        android:enabled="true"
        android:icon="@drawable/ic_place"
        android:title="@string/text_label_place"/>

    <item
        android:id="@+id/imNewspaper"
        android:enabled="true"
        android:icon="@drawable/ic_newspaper"
        android:title="@string/text_label_newspaper"/>
</menu>